--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Fix Jobless Clips: Bulk Editor</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
             display: flex;
