Update and claimed to use output value if there not null

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
                 <div class="title ">Queue URL</div>
                 <textarea id="queue" class="textbox " rows="1 " cols="20 " placeholder="Enter Queue URL"></textarea>
                 <div class="button-wrapper ">
-                    <button id="fixjobless" onclick="transformURLs() " class="button ">Fix Jobless</button>
-                </div>
-                <div class="button-wrapper ">
-                    <span>or</span>
+                    <button id="fixjobless" onclick="fixJobless() " class="button ">Fix Jobless</button>
                 </div>
                 <div class="button-wrapper ">
                     <button onclick="addClaimed() " class="button ">Add Claimed</button>
